--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -7,25 +7,26 @@
     <TextView
         android:id="@+id/item_rank"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_weight="1"
+        android:textAlignment="center"
         android:gravity="center"/>
     <TextView
         android:id="@+id/item_name"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:gravity="center"/>
     <TextView
         android:id="@+id/item_score"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:gravity="center"/>
     <TextView
         android:id="@+id/item_date"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:layout_weight="1"
         android:gravity="center"/>
 
