online ver. dev 2: fix bugs

--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         >
         <Button
-            android:id="@+id/main_menu_button"
+            android:id="@+id/main_menu_button_ranklist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -40,7 +40,7 @@
             android:backgroundTint="@color/purple"
             android:textColor="@color/white"/>
         <Button
-            android:id="@+id/exit_button"
+            android:id="@+id/exit_button_ranklist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
