--- a/app/src/main/res/layout/activity_online_result.xml
+++ b/app/src/main/res/layout/activity_online_result.xml
@@ -8,13 +8,68 @@
     >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/game_over_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hey"
+        android:text="GAME OVER!"
+        android:textSize="30dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/your_score_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
          />
+    <TextView
+        android:id="@+id/your_score_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Score"
+        android:textSize="22dp"
+        app:layout_constraintTop_toBottomOf="@id/game_over_text"
+        app:layout_constraintBottom_toTopOf="@id/rival_score_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <TextView
+        android:id="@+id/rival_score_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rival Score"
+        android:textSize="22dp"
+        app:layout_constraintTop_toBottomOf="@id/your_score_text"
+        app:layout_constraintBottom_toTopOf="@id/button_space_online"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <LinearLayout
+        android:id="@+id/button_space_online"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <Button
+            android:id="@+id/main_menu_button_online_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TITLE"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/purple"
+            android:textColor="@color/white"/>
+        <Button
+            android:id="@+id/exit_button_online_result"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="QUIT"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/purple"
+            android:textColor="@color/white"/>
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
